<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/variantRed1"
        android:id="@+id/screenNumberShow"
        android:layout_above="@id/result"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:textSize="32sp"
        android:text="@string/type"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/variantRed1"
        android:textSize="25sp"
        android:text="@string/result"
        android:id="@+id/result"
        android:layout_above="@id/allButtons"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="40dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:layout_alignParentBottom="true"
        android:id="@+id/allButtons"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstllline"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/clear"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="@color/variantRed1"
                android:textSize="32sp"
                android:text="@string/clear"
                style="?android:attr/buttonBarButtonStyle"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add"
                android:layout_marginStart="18dp"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="@color/variantRed1"
                android:textSize="32sp"
                android:text="@string/add"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sub"
                android:layout_marginStart="18dp"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="@color/variantRed1"
                android:textSize="32sp"
                android:text="@string/sub"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/allClear"
                android:layout_marginStart="18dp"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="@color/variantRed1"
                android:textSize="32sp"
                android:text="@string/allClear"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/secondllline"
            android:layout_below="@id/firstllline"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seven"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="?attr/colorSecondary"
                android:textSize="32sp"
                android:text="@string/seven"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eight"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="?attr/colorSecondary"
                android:layout_marginStart="18dp"
                android:textSize="32sp"
                android:text="@string/eight"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nine"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="?attr/colorSecondary"
                android:layout_marginStart="18dp"
                android:textSize="32sp"
                android:text="@string/nine"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/multiply"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="@color/variantRed1"
                android:layout_marginStart="18dp"
                android:textSize="32sp"
                android:text="@string/multiply"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/thirdllline"
            android:layout_below="@id/secondllline"
            android:layout_marginTop="13dp"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/four"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="?attr/colorSecondary"
                android:textSize="32sp"
                android:text="@string/four"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/five"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="?attr/colorSecondary"
                android:layout_marginStart="18dp"
                android:textSize="32sp"
                android:text="@string/five"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/six"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="?attr/colorSecondary"
                android:layout_marginStart="18dp"
                android:textSize="32sp"
                android:text="@string/six"
                style="?android:attr/buttonBarButtonStyle"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/divide"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="@color/variantRed1"
                android:layout_marginStart="18dp"
                android:textSize="32sp"
                android:text="@string/divide"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fourthllline"
            android:layout_below="@id/thirdllline"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/one"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="?attr/colorSecondary"
                android:textSize="32sp"
                android:text="@string/one"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/two"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="?attr/colorSecondary"
                android:textSize="32sp"
                android:layout_marginStart="18dp"
                android:text="@string/two"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/three"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="?attr/colorSecondary"
                android:textSize="32sp"
                android:layout_marginStart="18dp"
                android:text="@string/three"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/equal"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="@color/variantRed1"
                android:textSize="32sp"
                android:layout_marginStart="18dp"
                android:text="@string/equalTo"
                style="?android:attr/buttonBarButtonStyle"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fifthllline"
            android:layout_below="@id/fourthllline"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="15dp"
            >

            <Button
                android:id="@+id/zero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:text="@string/zero"
                android:textColor="?attr/colorSecondary"
                android:textSize="32sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/decimal"
                android:backgroundTint="?attr/colorPrimaryVariant"
                android:textColor="?attr/colorSecondary"
                android:textSize="32sp"
                android:layout_marginStart="18dp"
                android:text="@string/decimal"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>